Reformat CSS Test

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,4 +1,4 @@
-h1 {font-family: serif} 
-h1 {font-size: 300%}
-h1 {margin:auto}
-p {margin:auto}
+h1 {font-family: serif;} 
+h1 {font-size: 300%;}
+h1 {margin:50px;}
+p {margin: 50px;}
