--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -2,4 +2,5 @@ h1 {font-family: serif;}
 h1 {font-size: 300%;}
 h1 {margin:50px;}
 p {margin: 50px;}
+p {font-size: 120%}
 .center {text-align:center;}
