--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -4,4 +4,5 @@ h1 {font-family: serif;
     text-align:center; }
     
 p {margin: 50px;
-    font-size: 120%}
+    font-size: 120%;
+    text-align:center;}
