--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,12 +1,22 @@
-h1 {font-family: serif;
-    font-size: 300%;
-    margin:50px;
-    text-align:center; }
-    
-    p {margin: 50px;
-    font-size: 120%;
-    text-align:center;}
-body{ border:5px solid black; }
-.box {width: 600px;
-    margin: auto;}
-img {max-width: 100%}
+h1 {
+  font-family: serif;
+  font-size: 300%;
+  margin: 50px;
+  text-align: center;
+}
+
+p {
+  margin: 50px;
+  font-size: 120%;
+  text-align: center;
+}
+body {
+  border: 5px solid black;
+}
+.box {
+  width: 600px;
+  margin: auto;
+}
+img {
+  max-width: 100%;
+}
