--- a/OtherExampleStyleSheet.css
+++ b/OtherExampleStyleSheet.css
@@ -9,7 +9,7 @@ h2 {
   font-family: serif;
   font-size: 180%;
   text-align: center;
-  color: rgb(177, 6, 6)
+  color: rgb(177, 6, 6);
 }
 
 p {
@@ -21,6 +21,7 @@ body {
   border: 5px solid rgb(255, 255, 255);
   margin: 100px;
   background-color: rgb(0, 0, 0);
+  color: rgb(177, 6, 6);
 }
 .box {
   width: 600px;
