--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -3,11 +3,13 @@ h1 {
   font-size: 300%;
   margin: 50px;
   text-align: center;
+  color: rgb(177, 6, 6);
 }
-h2{ 
-    font-family: serif;
-    font-size: 180%; 
-    text-align: center;
+h2 {
+  font-family: serif;
+  font-size: 180%;
+  text-align: center;
+  color: rgb(177, 6, 6);
 }
 
 p {
@@ -16,9 +18,10 @@ p {
   text-align: center;
 }
 body {
-  border: 5px solid black;
+  border: 5px solid rgb(255, 255, 255);
   margin: 100px;
-  background-color:forestgreen
+  background-color: rgb(0, 0, 0);
+  color: rgb(177, 6, 6);
 }
 .box {
   width: 600px;
@@ -27,8 +30,10 @@ body {
 img {
   max-width: 100%;
 }
-a{
-    text-align: center; 
-    display: block;
+a {
+  text-align: center;
+  display: block;
 }
-html{ background-color: aqua;}
+html {
+  background-color: rgb(177, 6, 6);
+}
